# python-template

./: README.md  cookiecutter.json
{{ cookiecutter.repository_name }}/: README.md  pyproject.toml
